--- a/Agenda/Base.lproj/Main.storyboard
+++ b/Agenda/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjd-vi-ppJ">
-                                <rect key="frame" x="16" y="113" width="343" height="554"/>
+                                <rect key="frame" x="16" y="116" width="343" height="551"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ys-tw-Qw2">
                                         <rect key="frame" x="109" y="20" width="125" height="125"/>
@@ -213,6 +213,9 @@
                                                 <state key="normal" title="salvar">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="salvarAluno:" destination="ZY7-NM-Hup" eventType="touchUpInside" id="V5X-Op-d2R"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -258,7 +261,7 @@
             <objects>
                 <navigationController id="MAa-UF-TLD" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="qEa-A7-Ugc">
-                        <rect key="frame" x="0.0" y="20" width="375" height="93"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
