--- a/Agenda/Base.lproj/Main.storyboard
+++ b/Agenda/Base.lproj/Main.storyboard
@@ -47,6 +47,7 @@
                                 <connections>
                                     <outlet property="imageAluno" destination="I1a-iL-YQH" id="dM3-yt-b69"/>
                                     <outlet property="labelNomeDoAluno" destination="oKL-i4-VS5" id="GFr-bb-rep"/>
+                                    <segue destination="ZY7-NM-Hup" kind="show" id="boo-C1-JvD"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -273,4 +274,7 @@
             <point key="canvasLocation" x="-519" y="116"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="tio-sZ-JlU"/>
+    </inferredMetricsTieBreakers>
 </document>
